--- a/ProcessPageDraft.css
+++ b/ProcessPageDraft.css
@@ -13,5 +13,9 @@
     border-radius: 3px;
     margin: 0 0.5em 0 0;
     text-decoration: none;
+}
 
+.Inputfield__pw_page_name input[readonly="true"]{
+    opacity: 0.5;
+    
 }
